 * update g15 driver to be compatible with g15daemon > 1.2 (Anthony J. Mirabella)
 * allow compiling with LDFLAG "--as-needed" (Robert Buchholz)
 * optimize MtxOrb flush()
 * make MtxOrb use Brightness and OffBrightness like CFontzPacket
 * make Brightness & OffBrightness run-time configurable in CFontz & MtxOrb
 * add support for Iface and ProcSize screens for OS X / Darwin (Eric Pooch)

v.0.5.1
 + config file support in lcdproc client (Andrew Foss)
 * install server & client config files in $(sysconfdir)
 + new client lcdvc: virtual console on LCD
 * convert adv_bignum library to bitwise set_char()
 * adapt drivers to modified bignum library:
   + CFontz
   + CFontz633
   + CFontzPacket
   + hd44780
   + IOWarrior
   + MtxOrb
   + serialVFD
   + tyan
 + add iface screen(s) to lcdproc client (Andrew Foss/Markus Dolze)
 * update sample Perl clients
 * fix LCDd crash on shutdown of clients using "menu_set_main" (Andrew Foss)
 * fix sock_connect() to allow 0 as legal socket (Frederick Nacino)
 * improve serialVFD driver (Stefan Herdler)
 + add MD8800 driver for LCDs in Medion MD8800 PCs (Stefan Herdler/Martin Møller)
 * make bigclock client screen more flexible: centered, require only 14 chars
 * correct axis mapping logic for joystick driver (Jannis Achstetter)
 * fixes to the CFontz driver
 + new unified serial sub-driver for hd44780 (Matteo Pillon)
 - obsolete hd44780 subdrivers-removed: lcdserializer, picanlcd
 * character mapping for special HD44780 modules (Matteo Pillon)
 + g15 - driver for LCD in Logitech G15 gaming keyboards (Anthony J. Mirabella)
 + EyeboxOne - driver for the LCD display on the EyeboxOne (Cedric TESSIER)
 * more flexible parsing of config files: allow spaces around sections and keys
 * updated & extended documentation
 * command line options more synchronizd between server and clients
 * CFontzPacket & CFontz633 support big & little endian systems
 * MtxOrb driver completely rewritten to support used-defined characters