@@ -73,7 +73,7 @@ MODULE_EXPORT const char * serialVFD_get_info( Driver *drvthis );
 
 typedef struct driver_private_data {
 	int use_parallel;		// use parallel?
-	unsigned int port;		// Port in parallel mode
+	unsigned short port;		// Port in parallel mode
 	char device[200];		// Device in serial mode
 	int fd;
 	int speed;			// Speed in serial mode
@@ -96,9 +96,9 @@ typedef struct driver_private_data {
 	unsigned char charmap[128];
 	int display_type;		// display type
 	int last_custom;		// last custom character written
-	char custom_char[31][7]; 	// stored custom characters
-	char custom_char_store[31][7]; 	// custom characters backingstore
-	char hw_cmd[10][4]; 		// hardwarespecific commands
+	unsigned char custom_char[31][7]; 	// stored custom characters
+	unsigned char custom_char_store[31][7]; 	// custom characters backingstore
+	unsigned char hw_cmd[10][4]; 		// hardwarespecific commands
 	int usr_chr_dot_assignment[57];	// how to setup usercharacters
 	unsigned int usr_chr_mapping[31];// where to place the usercharacters (0..30) in the asciicode
 	int hbar_cc_offset;		// character offset of the bars
